Fix: popover styles and overflow scroll on small devices

--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -331,6 +331,9 @@
   .left-0 {
     left: calc(var(--spacing) * 0);
   }
+  .isolate {
+    isolation: isolate;
+  }
   .-z-1 {
     z-index: calc(1 * -1);
   }
@@ -366,6 +369,9 @@
   }
   .my-auto {
     margin-block: auto;
+  }
+  .mt-0 {
+    margin-top: calc(var(--spacing) * 0);
   }
   .mt-2 {
     margin-top: calc(var(--spacing) * 2);
@@ -428,6 +434,9 @@
   }
   .h-screen {
     height: 100vh;
+  }
+  .max-h-\[90vh\] {
+    max-height: 90vh;
   }
   .max-h-\[286px\] {
     max-height: 286px;
@@ -943,6 +952,11 @@
   .\[\&\:is\(\[open\]\,\:popover-open\)\]\:opacity-100 {
     &:is([open], :popover-open) {
       opacity: 100%;
+    }
+  }
+  .\[\@media\(min-height\:850px\)\]\:mt-auto {
+    @media (min-height: 850px) {
+      margin-top: auto;
     }
   }
   .\[\@media\(min-height\:850px\)\]\:mb-0 {
